--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "expo": "~52.0.7",
-    "expo-status-bar": "~2.0.0",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "expo-location": "~18.0.1",
-    "react-native-maps": "1.18.0"
+    "react-native-maps": "^1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
