--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-maps": "^1.14.0"
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
